tui/src/status/snapshots/ody_tui__status__tests__status_snapshot_includes_reasoning_details.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────╮
│  >_ odysseythink ody (v0.1.0-alpha.2)                  │
│  Model:            kimi-for-coding (reasoning high)    │
│  Model provider:   Kimi                                │
│  Directory: [[workspace]]                              │
│  Permissions:      Workspace (Ask for approval)        │
│  Agents.md:        <none>                              │
│                                                        │
│  Token usage:      1.9K total  (1K input + 900 output) │
│  Context window:   100% left (2.25K used / 272K)       │
╰────────────────────────────────────────────────────────╯
