tui/src/status/snapshots/ody_tui__status__tests__status_snapshot_shows_active_user_defined_profile.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────╮
│  >_ odysseythink ody (v0.1.0-alpha.2)                           │
│  Model:            kimi-for-coding (reasoning none)             │
│  Model provider:   Kimi                                         │
│  Directory: [[workspace]]                                       │
│  Permissions:      Profile locked (read-only, Ask for approval) │
│  Agents.md:        <none>                                       │
│                                                                 │
│  Token usage:      0 total  (0 input + 0 output)                │
│  Context window:   100% left (0 used / 272K)                    │
╰─────────────────────────────────────────────────────────────────╯
